--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "instagram-private-api",
   "description": "Instagram private API wrapper with proxy features",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
+  "bugs": { 
+    "url" : "https://github.com/huttarichard/instagram-private-api/issues", 
+    "email": "huttarichard@gmail.com"
+  },
+  "repository": { 
+    "type" : "git", 
+    "url" : "https://github.com/huttarichard/instagram-private-api.git"
+  },
+  "homepage": "https://github.com/huttarichard/instagram-private-api",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --inline-diffs --timeout 10000 tests/run.js"
   },
