--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Instagram private API wrapper with proxy features",
   "version": "0.2.1",
   "main": "index.js",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/huttarichard/instagram-private-api/issues",
     "email": "huttarichard@gmail.com"
@@ -31,6 +32,7 @@
     "underscore.string": "^3.2.2"
   },
   "devDependencies": {
+    "mkdirp": "^0.5.1",
     "faker": "^3.1.0",
     "inquirer": "^1.1.2",
     "mocha": "^2.4.5",
