--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tough-cookie": "^2.3.1",
     "tough-cookie-filestore": "0.0.1",
     "underscore": "^1.8.3",
-    "underscore.string": "^3.2.2"
+    "underscore.string": "^3.2.2",
+    "socks5-https-client": "^1.1.3"
   },
   "devDependencies": {
     "mkdirp": "^0.5.1",
