--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "is-stream": "^1.1.0",
     "js-md5": "^0.3.0",
     "json-bigint": "^0.2.0",
+    "mongo-cookie-monster": "0.0.6",
     "node-cache": "^3.0.0",
     "request": "^2.64.0",
     "request-promise": "^1.0.2",
+    "socks5-https-client": "^1.1.3",
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.1",
     "tough-cookie-filestore": "0.0.1",
     "underscore": "^1.8.3",
-    "underscore.string": "^3.2.2",
-    "socks5-https-client": "^1.1.3"
+    "underscore.string": "^3.2.2"
   },
   "devDependencies": {
     "mkdirp": "^0.5.1",
