--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tough-cookie-filestore": "0.0.1",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.2",
-    "socks5-https-client": "^1.1.3"
+    "socks5-https-client": "^1.1.3",
+    "stream-to-array": "^2.3.0"
   },
   "devDependencies": {
     "mkdirp": "^0.5.1",
