--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "socks5-https-client": "^1.1.3"
   },
   "devDependencies": {
-    "mkdirp": "^0.5.1",
     "faker": "^3.1.0",
+    "image-diff": "^1.6.3",
     "inquirer": "^1.1.2",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
     "node-resemble-js": "0.0.5",
     "should": "^8.3.1",
