update for testing cases

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "tough-cookie-filestore": "0.0.1",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.2",
-    "valid-url": "1.0.9"
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "faker": "^3.1.0",
