--- a/package.json
+++ b/package.json
@@ -18,33 +18,33 @@
   },
   "dependencies": {
     "bluebird": "^3.0.5",
-    "camelcase-keys": "^4.1.0",
-    "crypto-js": "^3.1.6",
+    "camelcase-keys": "^5.0.0",
+    "crypto-js": "^3.1.9-1",
     "is-stream": "^1.1.0",
-    "js-md5": "^0.3.0",
-    "json-bigint": "^0.2.0",
+    "js-md5": "^0.7.3",
+    "json-bigint": "^0.3.0",
     "lodash": "^4.17.5",
-    "node-cache": "^3.0.0",
-    "request": "^2.64.0",
-    "request-promise": "^1.0.2",
-    "socks5-https-client": "^1.1.3",
-    "touch": "^1.0.0",
+    "node-cache": "^4.2.0",
+    "proxy-agent": "^3.0.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "touch": "^3.1.0",
     "tough-cookie": "^2.3.3",
-    "tough-cookie-filestore": "0.0.1",
+    "tough-cookie-file-store": "^1.2.0",
     "underscore.string": "^3.3.4",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "faker": "^3.1.0",
-    "gm": "^1.23.0",
-    "image-diff": "^1.6.3",
-    "inquirer": "^1.1.2",
+    "faker": "^4.1.0",
+    "gm": "^1.23.1",
+    "image-diff": "^2.0.0",
+    "inquirer": "^6.2.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.4.5",
-    "node-resemble-js": "0.0.5",
-    "should": "^8.3.1",
-    "should-sinon": "0.0.5",
-    "sinon": "^1.17.3",
-    "tmp": "0.0.28"
+    "mocha": "^5.2.0",
+    "node-resemble-js": "0.2.0",
+    "should": "^13.2.3",
+    "should-sinon": "0.0.6",
+    "sinon": "^7.1.1",
+    "tmp": "0.0.33"
   }
 }
