--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "json-bigint": "^0.2.0",
     "lodash": "^4.17.5",
     "node-cache": "^3.0.0",
+    "proxy-agent": "^3.0.3",
     "request": "^2.88.0",
-    "request-promise": "^1.0.2",
-    "socks5-https-client": "^1.1.3",
+    "request-promise": "^4.2.2",
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
     "tough-cookie-filestore": "0.0.1",
