--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "request-promise": "^4.2.2",
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
-    "tough-cookie-filestore": "0.0.1",
+    "tough-cookie-file-store": "^1.2.0",
     "underscore.string": "^3.3.4",
     "valid-url": "^1.0.9"
   },
