--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "smappi-instagram-private-api",
-  "description": "Instagram private API wrapper for full access to instagram (fork of https://github.com/huttarichard/instagram-private-api)",
-  "version": "0.6.9",
+  "name": "instagram-private-api",
+  "description": "Instagram private API wrapper for full access to instagram",
+  "version": "0.6.8",
   "main": "index.js",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/adw0rd/instagram-private-api/issues",
-    "email": "x11org@gmail.com"
+    "url": "https://github.com/huttarichard/instagram-private-api/issues",
+    "email": "huttarichard@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/adw0rd/instagram-private-api.git"
+    "url": "https://github.com/huttarichard/instagram-private-api.git"
   },
-  "homepage": "https://github.com/adw0rd/instagram-private-api",
+  "homepage": "https://github.com/huttarichard/instagram-private-api",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --inline-diffs --timeout 1000000 tests/run.js"
   },
