Fix some tests and username usernameSuggestions

--- a/package.json
+++ b/package.json
@@ -32,16 +32,17 @@
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
     "tough-cookie-file-store": "^1.2.0",
-    "underscore.string": "^3.3.4",
+    "underscore.string": "^3.3.5",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
+    "dotenv": "^6.2.0",
     "faker": "^3.1.0",
     "gm": "^1.23.1",
     "image-diff": "^1.6.3",
     "inquirer": "^1.1.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.4.5",
+    "mocha": "^5.2.0",
     "node-resemble-js": "0.0.5",
     "should": "^8.3.1",
     "should-sinon": "0.0.5",
