--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "instagram-private-api",
   "description": "Instagram private API wrapper for full access to instagram",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "7.6.0"
+  },
   "bugs": {
     "url": "https://github.com/huttarichard/instagram-private-api/issues",
     "email": "huttarichard@gmail.com"
