--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "instagram-private-api",
   "description": "Instagram private API wrapper for full access to instagram",
   "version": "0.7.1",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "engines": {
     "node": "7.6.0"
@@ -17,6 +20,8 @@
   },
   "homepage": "https://github.com/huttarichard/instagram-private-api",
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "prepare": "npm run build",
     "test": "./node_modules/mocha/bin/mocha --inline-diffs --timeout 1000000 tests/run.js"
   },
   "dependencies": {
@@ -50,6 +55,8 @@
     "should": "^8.3.1",
     "should-sinon": "0.0.5",
     "sinon": "^1.17.3",
-    "tmp": "0.0.28"
+    "tmp": "0.0.28",
+    "ts-node": "^8.0.2",
+    "typescript": "^3.2.4"
   }
 }
