--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bluebird": "^3.5.2",
     "camelcase-keys": "^4.2.0",
     "chance": "^1.0.18",
+    "class-transformer": "^0.2.0",
     "crypto-js": "^3.1.6",
     "instagram-id-to-url-segment": "0.0.0",
     "is-stream": "^1.1.0",
@@ -39,6 +40,7 @@
     "lodash": "^4.17.5",
     "node-cache": "^3.0.0",
     "proxy-agent": "^3.0.3",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "touch": "^1.0.0",
