--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
     "tough-cookie-file-store": "^1.2.0",
+    "ts-custom-error": "^2.2.2",
     "underscore.string": "^3.3.5",
     "valid-url": "^1.0.9"
   },
