--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": "8.0.0"
+    "node": ">=8.0.0"
   },
   "bugs": {
     "url": "https://github.com/huttarichard/instagram-private-api/issues",
