(Request) use regexp instead of json-bigint

--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "instagram-id-to-url-segment": "0.0.0",
     "is-stream": "^1.1.0",
     "js-md5": "^0.3.0",
-    "json-bigint": "^0.2.0",
     "lodash": "^4.17.5",
     "node-cache": "^3.0.0",
     "proxy-agent": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "rxjs": "^6.4.0",
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
     "tough-cookie-file-store": "^1.2.0",
