--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Instagram private API wrapper for full access to instagram",
   "version": "0.8.31",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -20,7 +21,8 @@
   },
   "homepage": "https://github.com/huttarichard/instagram-private-api",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json && tsc -p tsconfig.build.json -d --emitDeclarationOnly --allowJs false",
+    "build": "tsc -p tsconfig.build.json && tsc -p tsconfig.build.json -d --emitDeclarationOnly",
+    "typecheck": "tsc -p tsconfig.build.json --noEmit",
     "prepare": "npm run build",
     "test": "./node_modules/mocha/bin/mocha --inline-diffs --timeout 1000000 tests/run.js"
   },
