--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./",
-    "allowJs": true,
+    "allowJs": false,
     "resolveJsonModule": true
   },
   "exclude": [
