(tsconfig) target es2017

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2016",
+    "target": "ES2017",
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
