--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "prepare": "npm run build",
     "test": "mocha --inline-diffs --timeout 1000000 tests/run.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "@types/bluebird": "^3.5.26",
     "@types/chance": "^1.0.1",
@@ -60,12 +65,14 @@
     "dotenv": "^6.2.0",
     "faker": "^3.1.0",
     "gm": "^1.23.1",
+    "husky": "^1.3.1",
     "image-diff": "^1.6.3",
     "inquirer": "^1.1.2",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
     "node-resemble-js": "0.0.5",
     "prettier": "1.16.2",
+    "pretty-quick": "^1.10.0",
     "should": "^8.3.1",
     "should-sinon": "0.0.5",
     "sinon": "^1.17.3",
