--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rxjs": "^6.4.0",
+    "stream-length": "^1.0.2",
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
     "tough-cookie-file-store": "^1.2.0",
