--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/bluebird": "^3.5.26",
     "@types/chance": "^1.0.1",
     "@types/lodash": "^4.14.120",
+    "@types/luxon": "^1.12.0",
     "@types/node": "^10.12.20",
     "@types/request-promise": "^4.1.42",
     "@types/tough-cookie": "^2.3.5",
@@ -47,18 +48,19 @@
     "chance": "^1.0.18",
     "class-transformer": "^0.2.0",
     "crypto-js": "^3.1.6",
+    "image-size": "^0.7.3",
     "instagram-id-to-url-segment": "0.0.0",
     "is-stream": "^1.1.0",
     "js-md5": "^0.3.0",
     "json-bigint": "^0.3.0",
     "lodash": "^4.17.5",
+    "luxon": "^1.12.1",
     "node-cache": "^3.0.0",
     "proxy-agent": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rxjs": "^6.4.0",
-    "stream-length": "^1.0.2",
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.3",
     "tough-cookie-file-store": "^1.2.0",
