--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
+    "ts-xor": "^1.0.6",
     "tslint": "^5.16.0",
     "typescript": "^3.4.4"
   }
