--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "typecheck": "tsc -p tsconfig.build.json --noEmit",
     "prepare": "npm run build",
     "test": "mocha --inline-diffs --timeout 1000000 tests/run.js",
-    "generate-interface": "ts-node ./tools/response-to-interface.ts"
+    "generate-interface": "ts-node ./tools/response-to-interface.ts",
+    "generate-docs": "ts-node ./tools/docs-generator.ts"
   },
   "husky": {
     "hooks": {
@@ -69,6 +70,8 @@
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-markdown": "^2.0.11",
     "typescript": "^3.4.4"
   }
 }
