proxy agent for socks proxy type

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "rxjs": "^6.4.0",
+    "socks-proxy-agent": "^4.0.2",
     "tough-cookie": "^2.5.0",
     "ts-custom-error": "^2.2.2",
     "ts-xor": "^1.0.6",
