--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "husky": "^1.3.1",
     "inquirer": "^1.1.2",
     "json-ts": "^1.6.4",
-    "prettier": "1.16.2",
+    "prettier": "^1.19.1",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "^2.0.11",
-    "typescript": "^3.4.4"
+    "typescript": "^3.7.2"
   }
 }
