--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "rxjs": "^6.5.2",
+    "snakecase-keys": "^3.1.0",
     "tough-cookie": "^2.5.0",
     "ts-custom-error": "^2.2.2",
     "ts-xor": "^1.0.6",
