--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bluebird": "^3.7.1",
     "chance": "^1.0.18",
     "class-transformer": "^0.2.0",
+    "debug": "^4.1.1",
     "image-size": "^0.7.3",
     "json-bigint": "^0.3.0",
     "lodash": "^4.17.5",
