Get rid of sticker interfaces. Now Sticker class acts like factory input interface

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "tough-cookie": "^2.5.0",
     "ts-custom-error": "^2.2.2",
     "ts-xor": "^1.0.6",
-    "url-regex": "^5.0.0"
+    "url-regex": "^5.0.0",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
