--- a/packages/android/package.json
+++ b/packages/android/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igpapi/android",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "bowzee <dilame.nickolson@gmail.com>",
   "homepage": "https://github.com/dilame/instagram-private-api/tree/master/packages/android#readme",
@@ -26,8 +26,8 @@
     "url": "https://github.com/dilame/instagram-private-api/issues"
   },
   "dependencies": {
-    "@igpapi/core": "^1.0.0-alpha.0",
-    "@igpapi/sticker": "^1.0.0-alpha.0",
+    "@igpapi/core": "^1.0.1-alpha.0",
+    "@igpapi/sticker": "^1.0.1-alpha.0",
     "@lifeomic/attempt": "^3.0.0",
     "@types/chance": "^1.0.2",
     "@types/request-promise": "^4.1.43",
@@ -50,5 +50,6 @@
   },
   "devDependencies": {
     "typescript": "^3.7.5"
-  }
+  },
+  "gitHead": "8d5faed4cf944b60c7b4ec5c27b0774192f757f3"
 }
