--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instagram-private-api",
   "description": "Instagram private API wrapper for full access to instagram",
   "version": "1.38.0",
+  "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -21,11 +22,9 @@
   },
   "homepage": "https://github.com/dilame/instagram-private-api",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.build.json -c tslint.json",
     "typecheck": "tsc -p tsconfig.build.json --noEmit",
-    "prepare": "npm run build",
     "test": "mocha --inline-diffs --timeout 1000000 tests/run.js",
     "generate-interface": "ts-node ./tools/response-to-interface.ts",
     "generate-docs": "ts-node ./tools/docs-generator.ts"
@@ -34,29 +33,6 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
-  },
-  "dependencies": {
-    "@lifeomic/attempt": "^3.0.0",
-    "@types/chance": "^1.0.2",
-    "@types/request-promise": "^4.1.43",
-    "bluebird": "^3.7.1",
-    "chance": "^1.0.18",
-    "class-transformer": "^0.2.0",
-    "debug": "^4.1.1",
-    "image-size": "^0.7.3",
-    "json-bigint": "^0.3.0",
-    "lodash": "^4.17.5",
-    "luxon": "^1.12.1",
-    "reflect-metadata": "^0.1.13",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "rxjs": "^6.5.2",
-    "snakecase-keys": "^3.1.0",
-    "tough-cookie": "^2.5.0",
-    "ts-custom-error": "^2.2.2",
-    "ts-xor": "^1.0.6",
-    "url-regex": "^5.0.0",
-    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
