--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "./tsconfig.build",
+  "include": ["./packages"],
   "compilerOptions": {
     "baseUrl": "./packages",
     "paths": {
