--- a/packages/sticker/package.json
+++ b/packages/sticker/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.2.0",
     "lodash": "^4.17.5",
     "snakecase-keys": "^3.1.0",
+    "tsyringe": "^4.0.1",
     "utility-types": "^3.10.0"
   },
   "devDependencies": {
