--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/dilame/instagram-private-api",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\"",
+    "build": "lerna run build",
     "clean": "lerna run clean",
     "lint": "tslint -p tsconfig.build.json -c tslint.json",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -49,6 +50,7 @@
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
     "ts-node": "^8.1.0",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "^5.16.0",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "^2.0.11",
