--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "type": "git",
     "url": "https://github.com/dilame/instagram-private-api.git"
   },
-  "homepage": "https://github.com/dilame/instagram-private-api",
+  "homepage": "https://github.com/Antoxa1081/instagram-private-api",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "typecheck": "tsc -p tsconfig.build.json --noEmit",
-    "prepare": "npm run build",
+    "prepublish": "npm run build",
     "test": "mocha --inline-diffs --timeout 1000000 tests/run.js",
     "generate-interface": "ts-node ./tools/response-to-interface.ts",
     "generate-docs": "ts-node ./tools/docs-generator.ts"
