--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "*"
+    "dist"
   ],
   "license": "MIT",
   "engines": {
@@ -25,10 +25,8 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "typecheck": "tsc -p tsconfig.build.json --noEmit",
-    "prepare": "npm run build",
-    "postinstall": "npm run build",
+    "prepublish": "npm run build",
     "test": "mocha --inline-diffs --timeout 1000000 tests/run.js",
-    "ts-node-test": "ts-node test.ts",
     "generate-interface": "ts-node ./tools/response-to-interface.ts",
     "generate-docs": "ts-node ./tools/docs-generator.ts"
   },
@@ -73,10 +71,10 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "^2.0.11",
-    "typescript": "^3.9.2"
+    "typescript": "^3.7.2"
   }
 }
