--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "debug": "^4.1.1",
     "image-size": "^0.7.3",
     "json-bigint": "^0.3.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.20",
     "luxon": "^1.12.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
@@ -55,7 +55,7 @@
     "tough-cookie": "^2.5.0",
     "ts-custom-error": "^2.2.2",
     "ts-xor": "^1.0.6",
-    "url-regex": "^5.0.0",
+    "url-regex-safe": "^1.0.2",
     "utility-types": "^3.10.0"
   },
   "devDependencies": {
