--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.3.1",
     "debug": "^4.1.1",
     "image-size": "^0.7.3",
+    "jsdom": "^23.0.1",
     "json-bigint": "^1.0.0",
     "lodash": "^4.17.20",
     "luxon": "^1.12.1",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
+    "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.14.123",
     "@types/luxon": "^1.12.0",
     "@types/node": "^10.14.5",
